--- a/app/static/scss/_variables.scss
+++ b/app/static/scss/_variables.scss
@@ -5,8 +5,10 @@ $yellow: #FAD02C;
 $purple: #404153;
 $veryLightgray: #F6F6F6;
 $darkGray: #A9A9A9;
+$brightPurple: #6C63FF;
 
 // font sizes
+$font-tenpx: 0.625rem;
 $font-vsm: 0.75rem; // 12px
 $font-sm: 0.875rem; // 14px
 $font-med: 1.125rem; // 18 px
