--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <div class="flex flex-fd-col flex-fill-height">
+    <div class="flex flex-bp flex-fd-col flex-fill-height">
         <section class="hero container--all">
             <div class="hero__hello">
                 <h1>Hello!</h1>
@@ -15,13 +15,17 @@
                 PatientDB is a simple web app that stores patient information and able to query the database to display the information.
                 </p>
                 <br>
-                <p>
+                <p class="container--margin-bottom-sm">
                 Features include able to do searches using ID number, name, and diagnosis. On todo list: search using date admitting or discharged.
                 </p>
+                <div class="flex flex-jc-c">
+                <a class="button_links container--input-padding container--margin-right container--margin-left" href="{{ url_for('main.add_patient') }}">Add Patient</a>
+                <a class="button_links container--input-padding container--margin-left" href="{{ url_for('main.all_patients')  }}">View All Patients</a>
+</div>
             </div>
         </section>
 
-        <section class="patientdb flex flex-jc-c flex-ai-c">
+        <section class="patientdb flex flex-jc-c flex-ai-c bg-grey">
             
             <div class="patientdb__card container--all container--wrapper">
                 <div class="patientdb__image"></div>
