--- a/app/static/scss/_index.scss
+++ b/app/static/scss/_index.scss
@@ -30,6 +30,11 @@
     &__image {
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
+        transition: 300ms ease-in-out;
+        
+        &:hover {
+            filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.4));
+        }
         
         background-size: auto;
         background-repeat: no-repeat;
@@ -60,16 +65,17 @@
         flex: 1;
     }
     flex: auto;
-    background-image: radial-gradient(circle, $lightGray, $veryLightgray);
+
     
     &__card {
         position: relative;
-        width: 18.75rem;
         background-color: #FFFFFF;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 300ms ease-in-out;
+        height: fit-content;
         width: 80%;
         border-radius: 5px;
+        z-index: 1;
 
         &:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -94,12 +100,13 @@
         }
     }
 
-    input[type=submit] {
+    input[type=submit], input[type=button] {
+        opacity: 1;
         border: 0;
         font-size: $font-vsm;
         font-weight: 300;
         color: $lightGray;
-        background-color: #6C63FF;
+        background-color: $brightPurple;
         border-radius: 2px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
         transition: all 300ms ease-in-out;
@@ -108,6 +115,19 @@
             opacity: 0.8;
         }
         }
+
+    textarea {
+        width: 100%;
+        background-color: $lightGray;
+        border: 1px solid $lightGray;
+        border-radius: 5px;
+        transition: all 300ms ease-in-out;
+        &:focus {
+            border: 1px solid $darkGray;
+            outline: none;
+            background-color: $veryLightgray;
+        }
+    }
 
     &__image {
         position: absolute;
@@ -119,4 +139,20 @@
         background-repeat: no-repeat;
         background-position: center;
     }
+
+
+}
+
+a.button_links {
+        color: $brightPurple;
+        font-size: $font-vsm;
+        border: 1px solid $brightPurple;
+        border-radius: 2px;
+        transition: 300ms ease-in-out;
+
+        &:hover {
+            color: #fff;
+            background-color: $brightPurple;
+        }
+
 }
