--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -32,7 +32,7 @@
                 <h1 class="container--margin-bottom-sm">PatientDB</h1>
                 <form action="{{ url_for('main.search') }}" method="get">
                     <input class="container--margin-bottom-sm container--input-padding" 
-                        type="text" name="query" id="" placeholder="Search...">
+                        type="text" name="query" id="" placeholder="Search..." autocomplete="off">
                     <input class="container--input-padding" type="submit" value="Submit">
                 </form>
             </div>
