--- a/app/templates/main/patient_form.html
+++ b/app/templates/main/patient_form.html
@@ -19,6 +19,9 @@
             {{ render_field(form.first_name, placeholder="First name", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.last_name, placeholder="Last name", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.middle_name, placeholder="Middle name", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.address, placeholder="Address", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.email_address, placeholder="Email", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.phone_number, placeholder="Contact Number", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.name_suffix, placeholder="Jr., Sr., III, etc. (Leave blank if none)", class="container--input-padding container--margin-bottom-sm ") }}
             {{ render_field(form.age, placeholder="Age", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.submit, class="container--input-padding", id="general_data_submit") }}
