--- a/app/static/scss/_variables.scss
+++ b/app/static/scss/_variables.scss
@@ -4,8 +4,10 @@ $lightGray: #E9EAEC;
 $yellow: #FAD02C;
 $purple: #404153;
 $veryLightgray: #F6F6F6;
+$veryLightergray: #fff;
 $darkGray: #A9A9A9;
 $brightPurple: #6C63FF;
+$verydarkGray: #222222;
 
 // font sizes
 $font-tenpx: 0.625rem;
