--- a/app/templates/main/patient_update.html
+++ b/app/templates/main/patient_update.html
@@ -1,29 +1,33 @@
 {% extends "base.html" %}
 {% from "_formhelpers.html" import render_field %}
+
+{% block head %}
+<title>Edit Patient</title>
+{% endblock %}
+
 {% block content %}
 <container class="display-block flex-fill-height bg-grey">
     <div class="flex flex-auto-height bg-grey">
     <div class="flex-jc-c patientdb container--all">
     <div class="patientdb__card container--wrapper">
         <form method="POST" class="container--all" action="{{ url_for('main.patient_update', id=patient.id) }}">
+            <a href="{{ referrer }}" class="inline-block inline-block-float-right">
+                <input type="button" class="container--input-padding" value="Back">
+            </a>
             <h3 class="container--margin-bottom-sm">General Data</h3>
+            
             {{ form.hidden_tag() }}
             {{ render_field(form.first_name, placeholder="First name", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.last_name, placeholder="Last name", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.middle_name, placeholder="Middle name", class="container--input-padding container--margin-bottom-sm") }}
             {{ render_field(form.name_suffix, placeholder="Jr., Sr., III, etc. (Leave blank if none)", class="container--input-padding container--margin-bottom-sm ") }}
             {{ render_field(form.age, placeholder="Age", class="container--input-padding container--margin-bottom-sm") }}
+            
             <p id="messages_from_ajax" style="display: none;"></p>
-        </form>
-        
-        <div id="table_similar_patients">
-                    <form method="post" id="full_form_submit" class="container--pr container--pl container--pb bg">
 
-            <h3 class="container--margin-bottom-sm">Additional Information</h3>
-            {{ form.hidden_tag() }}
-            {{ render_field(form2.address, placeholder="Address", class="container--input-padding container--margin-bottom-sm") }}
-            {{ render_field(form2.email_address, placeholder="Email", class="container--input-padding container--margin-bottom-sm") }}
-            {{ render_field(form2.phone_number, placeholder="Contact Number", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.address, placeholder="Address", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.email_address, placeholder="Email", class="container--input-padding container--margin-bottom-sm") }}
+            {{ render_field(form.phone_number, placeholder="Contact Number", class="container--input-padding container--margin-bottom-sm") }}
 
             <h3 class="container--margin-bottom-sm">History</h3>
             <div class="tooltip">
@@ -52,7 +56,6 @@
             </div>
 
             <h3 class="container--margin-bottom-sm">Physical Exam</h3>
-
             <div class="tooltip">
                 {{ render_field(form2.pe, placeholder="Physical Examination", class="container--input-padding container--margin-bottom-sm") }}
                 <span class="tooltiptext">Physical Exam</span>
