--- a/app/templates/main/section_diagnosis.html
+++ b/app/templates/main/section_diagnosis.html
@@ -1,5 +1,5 @@
 <label for="diagnosis">List of Diagnosis:</label>
-<input list="diagnosis" name="" id="diagnosisInputValue" class="datalist">
+<input list="diagnosis" name="" id="diagnosisInputValue" class="datalist" value="{{ diagnosis }}">
 
 <datalist id="diagnosis">
     {% for i in diagnosis_select %}
