--- a/app/templates/main/section_second_form.html
+++ b/app/templates/main/section_second_form.html
@@ -2,7 +2,7 @@
 
 <div>
         <form method="post" id="full_form_submit" class="container--pr container--pl container--pb bg">
-
+            {{ score }}
             {{ form.csrf_token }}
 
 
