added missing script tag to one of html pages. commiting readme files

--- a/app/templates/main/patient_form.html
+++ b/app/templates/main/patient_form.html
@@ -45,5 +45,6 @@
 </container>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery_csrf_and_textareaheight.js') }}"></script>
 
 {% endblock %}
