Added error handlers 404 and 500 with respective html. Finished about page added new package flask-markdown. Added fake.py to automatically add patients and history. fakey package added to pipenv dev packages. Added database migrations with alembic. Added basic unit tests

--- a/app/static/scss/_globals.scss
+++ b/app/static/scss/_globals.scss
@@ -154,6 +154,9 @@ div.bg-lightgrey {
     &-fd-row {
         flex-direction: row;
     }
+    &-fd-col {
+        flex-direction: column;
+    }
     &-fill-height {
         height: calc(100vh - 50px);
     }
@@ -246,3 +249,4 @@ p.note {
 p.history {
     white-space: pre-wrap;
 }
+
