--- a/app/static/scss/_index.scss
+++ b/app/static/scss/_index.scss
@@ -79,6 +79,9 @@
         &:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
+        &--about {
+            width: 100%;
+        }
     }
 
     h1 {
@@ -110,7 +113,12 @@
         background-repeat: no-repeat;
         background-position: center;
     }
-
+    p a {
+        color: $darkBlue;
+        &:hover {
+            color: $lightGray
+        }
+    }
 
 }
 
