--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -5,10 +5,14 @@
 {% endblock %}
 
 {% block content %}
-<container class="flex flex-fd-col flex-jc-c flex-ai-c flex-fill-height bg-grey">
-    <h1>500 - Internal Server Error</h1>
-        <a href="{{ back_link }}" class="inline-block inline-block-float-right">
-                <input type="button" class="container--input-padding" value="Back">
-            </a>
+<div class="patientdb flex flex-jc-c container--wrapper">
+    <div class="patientdb__card text-align-center container--all">
+    <h1>500 - Internal Server Error!</h1>
+    <hr>
+    <p class="container--pb-sm">{{ e }}</p>
+    <a href="{{ back_link }}" class="">
+                <input type="button" class="container--input-padding" value="Back"></a>
+    </div>
+</div>
 </container>
 {% endblock %}
