Finished unit tests with 70% coverage. Added heroku deploay files

--- a/app/templates/main/patient_form.html
+++ b/app/templates/main/patient_form.html
@@ -33,6 +33,7 @@
             {% endfor %}
             
             <dd><input id="general_data_submit" class="container--input-padding" type="submit" value="Submit"></dd>
+            <p class="container--margin-bottom-sm">&#128542; No connection to elasticsearch. Please wait after submitting.</p>
             <p id="messages_from_ajax" style="display: none;"></p>
         </form>
         
